--- a/style.css
+++ b/style.css
@@ -1,169 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 30px;
-}
-
-.location > a {
-  text-decoration: none;
-  font-size: 20px;
-}
-
-.logo {
-  width: 200px;
-}
-
-.nav-items > ul {
-  display: flex;
-  list-style-type: none;
-}
-
-.nav-items > ul > li > a {
-  text-decoration: none;
-}
-
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-  font-size: 20px;
-}
-
-.res-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.res-card:hover {
-  border: 1px solid grey;
-  cursor: pointer;
-}
-
-.res-card {
-  margin-bottom: 20px;
-  margin-top: 20px;
-  border-radius: 10px;
-  width: 273px;
-  height: 283px;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  justify-content: space-between;
-}
-
-.res-card > img {
-  width: 273px;
-  height: 170px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.res-card h3 {
-  margin: 0;
-  max-width: 100%;
-  padding: 2px;
-}
-
-.res-card h4 {
-  margin: 0;
-  max-width: 100%;
-  word-wrap: break-word;
-  padding: 2px;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.shimmer-card {
-  margin-bottom: 20px;
-  margin-top: 20px;
-  border-radius: 10px;
-  width: 273px;
-  height: 283px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  background-color: #f0f0f0; /* Light background for shimmer */
-  overflow: hidden;
-}
-
-.shimmer-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 10px; /* Space between shimmer elements */
-  /* padding: 15px; */
-}
-
-.shimmer {
-  width: 100%;
-  height: 20px;
-  border-radius: 5px;
-  background: #e0e0e0;
-  position: relative;
-  overflow: hidden;
-}
-
-.shimmer::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.5) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  animation: shimmer 1.5s infinite;
-}
-
-/* Keyframes for shimmer animation */
-@keyframes shimmer {
-  0% {
-    left: -100%;
-  }
-  100% {
-    left: 100%;
-  }
-}
-
-.img-shimmer {
-  width: 273px;
-  height: 170px;
-  border-radius: 10px;
-}
-
-/* Custom Heights for Shimmer Elements */
-.h3-shimmer {
-  height: 24px;
-  margin: 0 5px;/* Simulating h3 text */
-  width: 150px; 
-}
-
-.p-shimmer {
-  height: 16px;
-  margin: 0 5px; /* Simulating paragraph text */
-  width: auto;
-}
-
-.login {
-  padding: 0 20px;
-  cursor: pointer;
-}
-
-.filter {
-  display: flex;
-  gap: 20px;
-}
-
-.search {
-  gap: 10px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
